# IniPackManager

./: .gitignore  README.md  package-lock.json  package.json  splashscreen.html  vite.config.ts
.agents/: bun.md
config/data/: games.toml
config/preset/mo/: aimo.ini  artmo.ini  entry.toml  rulesmo.ini  soundmo.ini  thememo.ini  uimd.ini
config/preset/yuri/: artmd.ini  entry.toml
docs/: config.toml-规则文档.md
docs/updater/: README.md  latest.json.example
scripts/: package-pack-repository.ps1  package.ps1
src/: App.css  App.tsx  catalogFilters.ts  main.tsx  tagTranslations.ts  types.ts  useAppStyles.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/data/: instances.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  app_commands.rs  app_constants.rs  app_pack_apply.rs  app_pack_config.rs  app_pack_values.rs  app_preset.rs  app_remote.rs  app_storage.rs  app_types.rs  main.rs
src/components/dialogs/: GlobalSettingsDialog.tsx  InstanceDetailDialog.tsx  SettingsPageLayout.tsx
src/components/panels/: DownloadManagerPanel.tsx  LocalComponentsPanel.tsx  RemoteRepositoryPanel.tsx  RepositoryFilters.tsx
